Time: 2 ms (99.72%), Space: 45.2 MB (41.87%) - LeetHub